fix: validate change status
